--- a/src/app/button-toggle-forms-example.html
+++ b/src/app/button-toggle-forms-example.html
@@ -1,30 +1,30 @@
-<section>
-  <h4>Select a number</h4>
+<h1 class="center">Select two numbers</h1>
+
+<div class="full-width center">
   <mat-button-toggle-group
-    [(ngModel)]="selectedNumber"
+    [(ngModel)]="firstNumber"
     aria-label="Font Style"
     [vertical]="true"
+    class="half-width"
   >
     <mat-button-toggle value="0">0</mat-button-toggle>
     <mat-button-toggle value="1">1</mat-button-toggle>
     <mat-button-toggle value="2">2</mat-button-toggle>
+    <mat-button-toggle value="3">3</mat-button-toggle>
+    <mat-button-toggle value="4">4</mat-button-toggle>
+    <mat-button-toggle value="5">5</mat-button-toggle>
   </mat-button-toggle-group>
-  <p>Chosen value is {{selectedNumber}}</p>
-</section>
 
-<section>
-  <h4>Button Toggle inside of a Reactive form</h4>
   <mat-button-toggle-group
-    [formControl]="fontStyleControl"
+    [(ngModel)]="secondNumber"
     aria-label="Font Style"
+    [vertical]="true"
+    class="half-width"
   >
-    <mat-button-toggle value="bold">Bold</mat-button-toggle>
-    <mat-button-toggle value="italic">Italic</mat-button-toggle>
-    <mat-button-toggle value="underline">Underline</mat-button-toggle>
+    <mat-button-toggle *ngFor="let number of listNumber" [value]="number"
+      >{{number}}</mat-button-toggle
+    >
   </mat-button-toggle-group>
-  <p>Chosen value is {{fontStyleControl.value}}</p>
-</section>
+</div>
 
-<!-- Copyright 2022 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at https://angular.io/license -->
+<h2 class="center">Multiplication = {{firstNumber * secondNumber}}</h2>
